fixed h1 header alignment on post listings

--- a/assets/main.css
+++ b/assets/main.css
@@ -123,7 +123,6 @@ code {
 
 .centered-index {
   margin: 0 auto;
-  width: fit-content;
 }
 
 .error-block {
